modified till products

--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="about__text">
                         <div class="section-title">
-                            <span>About Cake shop</span>
-                            <h2>Cakes and bakes from the house of Queens!</h2>
+                            <span>About Anjani Cakes</span>
+                            <h2>Cakes and bakes from Anjani Cakes!</h2>
                         </div>
-                        <p>The "Cake Shop" is a Jordanian Brand that started as a small family business. The owners are
-                        Dr. Iyad Sultan and Dr. Sereen Sharabati, supported by a staff of 80 employees.</p>
+                        <p>"Anjani Cakes" is a Indian Brand which is owned by Harshita Soni, 
+                            supported by a Anjani Soni where every bite is a taste of homemade happiness! Their passion is crafting delicious, handcrafted cakes that fill your heart and home with the warmth of tradition.</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
@@ -143,14 +143,14 @@
                             <p>Cake design</p>
                             <div id="bar1" class="barfiller">
                                 <div class="tipWrap"><span class="tip"></span></div>
-                                <span class="fill" data-percentage="95"></span>
+                                <span class="fill" data-percentage="97"></span>
                             </div>
                         </div>
                         <div class="about__bar__item">
-                            <p>Cake Class</p>
+                            <p>Cake Taste</p>
                             <div id="bar2" class="barfiller">
                                 <div class="tipWrap"><span class="tip"></span></div>
-                                <span class="fill" data-percentage="80"></span>
+                                <span class="fill" data-percentage="100"></span>
                             </div>
                         </div>
                         <div class="about__bar__item">
@@ -181,13 +181,13 @@
                     <div class="categories__item">
                         <div class="categories__item__icon">
                             <span class="flaticon-034-chocolate-roll"></span>
-                            <h5>Butter</h5>
+                            <h5>Cookies</h5>
                         </div>
                     </div>
                     <div class="categories__item">
                         <div class="categories__item__icon">
                             <span class="flaticon-005-pancake"></span>
-                            <h5>Red Velvet</h5>
+                            <h5>Cakes</h5>
                         </div>
                     </div>
                     <div class="categories__item">
@@ -199,13 +199,7 @@
                     <div class="categories__item">
                         <div class="categories__item__icon">
                             <span class="flaticon-006-macarons"></span>
-                            <h5>Donut</h5>
-                        </div>
-                    </div>
-                    <div class="categories__item">
-                        <div class="categories__item__icon">
-                            <span class="flaticon-006-macarons"></span>
-                            <h5>Cupcake</h5>
+                            <h5>Chocolates</h5>
                         </div>
                     </div>
                 </div>
@@ -227,10 +221,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">Dozen Cupcakes</a></h6>
-                            <div class="product__item__price">$32.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">32.00</div>
                         </div>
                     </div>
                 </div>
@@ -243,10 +234,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">Cookies and Cream</a></h6>
-                            <div class="product__item__price">$30.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">30.00</div>
                         </div>
                     </div>
                 </div>
@@ -259,10 +247,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">Gluten Free Mini Dozen</a></h6>
-                            <div class="product__item__price">$31.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">31.00</div>
                         </div>
                     </div>
                 </div>
@@ -275,10 +260,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">Cookie Dough</a></h6>
-                            <div class="product__item__price">$25.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">25.00</div>
                         </div>
                     </div>
                 </div>
@@ -291,10 +273,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">Vanilla Salted Caramel</a></h6>
-                            <div class="product__item__price">$05.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">05.00</div>
                         </div>
                     </div>
                 </div>
@@ -307,10 +286,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">German Chocolate</a></h6>
-                            <div class="product__item__price">$14.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">14.00</div>
                         </div>
                     </div>
                 </div>
@@ -323,10 +299,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">Dulce De Leche</a></h6>
-                            <div class="product__item__price">$32.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">32.00</div>
                         </div>
                     </div>
                 </div>
@@ -339,10 +312,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">Mississippi Mud</a></h6>
-                            <div class="product__item__price">$08.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">08.00</div>
                         </div>
                     </div>
                 </div>
