modified home page

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     <!-- Product Section End -->
 
     <!-- Class Section Begin -->
-    <section class="class spad">
+    <!-- <section class="class spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
@@ -323,11 +323,11 @@
                 class="play-btn video-popup"><i class="fa fa-play"></i></a>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Class Section End -->
 
     <!-- Team Section Begin -->
-    <section class="team spad">
+    <!-- <section class="team spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 col-md-7 col-sm-7">
@@ -401,11 +401,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Team Section End -->
 
     <!-- Testimonial Section Begin -->
-    <section class="testimonial spad">
+    <!-- <section class="testimonial spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -552,7 +552,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Testimonial Section End -->
 
     <!-- Instagram Section Begin -->
@@ -565,7 +565,7 @@
                             <span>Follow us on instagram</span>
                             <h2>Sweet moments are saved as memories.</h2>
                         </div>
-                        <h5><i class="fa fa-instagram"></i> @sweetcake</h5>
+                        <h5><i class="fa fa-instagram"></i> @an.jani8526</h5>
                     </div>
                 </div>
                 <div class="col-lg-8">
@@ -613,18 +613,19 @@
             <div class="row">
                 <div class="col-lg-4 col-md-7">
                     <div class="map__inner">
-                        <h6>COlorado</h6>
+                        <h6>Anjani Cakes</h6>
                         <ul>
-                            <li>1000 Lakepoint Dr, Frisco, CO 80443, USA</li>
-                            <li>Sweetcake@support.com</li>
-                            <li>+1 800-786-1000</li>
+                            <li>3B, Space Residency, Near Fashion Factory,</li>
+                            <li> Mira Road, Mumbai, Maharastra.</li>
+                            <!-- <li>anjanicakes@gmail.com</li>
+                            <li>(+91)</li> -->
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
         <div class="map__iframe">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d10784.188505644011!2d19.053119335158936!3d47.48899529453826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1543907528304" height="300" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3766.079896261048!2d72.87673477466998!3d19.278891445572825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b06643e6807b%3A0x7802c58722650953!2sSpace%20Residence%2C%20SPACE%20RESIDENCE%2C%20near%20Fashion%20Factory%2C%20Hatkesh%20Udhog%20Nagar%2C%20Mira%20Road%20East%2C%20Mira%20Bhayandar%2C%20Maharashtra%20401107!5e0!3m2!1sen!2sin!4v1696511087777!5m2!1sen!2sin" height="300" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
     </div>
     <!-- Map End -->
@@ -648,13 +649,12 @@
                         <div class="footer__logo">
                             <a href="#"><img src="img/footer-logo.png" alt=""></a>
                         </div>
-                        <p>Lorem ipsum dolor amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore dolore magna aliqua.</p>
+                        <p>Follow us on the below platform and share the love.</p>
                         <div class="footer__social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
                             <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-youtube-play"></i></a>
+                            <!-- <a href="#"><i class="fa fa-youtube-play"></i></a> -->
                         </div>
                     </div>
                 </div>
@@ -674,9 +674,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7">
-                        <p class="copyright__text text-white"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                          Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        <p class="copyright__text text-white">
+                          Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This site is made with <i class="fa fa-heart" aria-hidden="true"></i> by Anjani Cakes
                       </p>
                   </div>
                   <div class="col-lg-5">
