modified home page

--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
+                <!-- <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="footer__newslatter">
                         <h6>Subscribe</h6>
                         <p>Get latest updates and offers.</p>
@@ -667,7 +667,7 @@
                             <button type="submit"><i class="fa fa-send-o"></i></button>
                         </form>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="copyright">
