--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                           Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This site is made with <i class="fa fa-heart" aria-hidden="true"></i> by Anjani Cakes
                       </p>
                   </div>
-                  <div class="col-lg-5">
+                  <!-- <div class="col-lg-5">
                     <div class="copyright__widget">
                         <ul>
                             <li><a href="#">Privacy Policy</a></li>
@@ -686,7 +686,7 @@
                             <li><a href="#">Site Map</a></li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
