modified home page

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                             <span>About Anjani Cakes</span>
                             <h2>Cakes and bakes from Anjani Cakes!</h2>
                         </div>
-                        <p>"Anjani Cakes" is a Indian Brand which is owned by Harshita Soni, 
-                            supported by Anjani Soni where every bite is a taste of homemade happiness! Their passion is crafting delicious, handcrafted cakes that fill your heart and home with the warmth of tradition.</p>
+                        <p>"Anjani Cakes" is an Indian Brand which is owned by Harshita Soni, 
+                            supported by Anjani Soni where every bite is a taste of homemade happiness! Their passion is baking delicious, mouthwatering cakes that fill your heart.</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
