modified home page

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <p class="copyright__text text-white">
-                          Copyright &copy;<script>document.write(new Date().getFullYear());</script>
+                          Copyright &copy;<script>document.write(new Date().getFullYear());</script> | All rights reserved.
                       </p>
                   </div>
                   <!-- <div class="col-lg-5">
