--- a/contact.html
+++ b/contact.html
@@ -235,7 +235,7 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <p class="copyright__text text-white">
-                          Copyright &copy;<script>document.write(new Date().getFullYear());</script>
+                          Copyright &copy;<script>document.write(new Date().getFullYear());</script> | All rights reserved.
                       </p>
                   </div>
             </div>
