--- a/shop.html
+++ b/shop.html
@@ -391,7 +391,7 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <p class="copyright__text text-white"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                          Copyright &copy;<script>document.write(new Date().getFullYear());</script>
+                          Copyright &copy;<script>document.write(new Date().getFullYear());</script> | All rights reserved.
                           <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                       </p>
                   </div>
