--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li class="active"><a href="./index.html">Home</a></li>
-                            <li><a href="./about.html">About</a></li>
+                            <!-- <li><a href="./about.html">About</a></li> -->
                             <li><a href="./shop.html">Shop</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            <!-- <li><a href="./contact.html">Contact</a></li> -->
                         </ul>
                     </nav>
                 </div>
@@ -417,15 +417,6 @@
                           Copyright &copy;<script>document.write(new Date().getFullYear());</script> | All rights reserved.
                       </p>
                   </div>
-                  <!-- <div class="col-lg-5">
-                    <div class="copyright__widget">
-                        <ul>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Terms & Conditions</a></li>
-                            <li><a href="#">Site Map</a></li>
-                        </ul>
-                    </div>
-                </div> -->
             </div>
         </div>
     </div>
