modified home page

--- a/shop.html
+++ b/shop.html
@@ -100,7 +100,7 @@
     <!-- Shop Section Begin -->
     <section class="shop spad">
         <div class="container">
-            <div class="shop__option">
+            <!-- <div class="shop__option">
                 <div class="row">
                     <div class="col-lg-7 col-md-7">
                         <div class="shop__option__search">
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="product__item">
@@ -140,10 +140,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">Dozen Cupcakes</a></h6>
-                            <div class="product__item__price">$32.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">32.00</div>
                         </div>
                     </div>
                 </div>
@@ -156,10 +153,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">Cookies and Cream</a></h6>
-                            <div class="product__item__price">$30.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">30.00</div>
                         </div>
                     </div>
                 </div>
@@ -172,10 +166,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">Gluten Free Mini Dozen</a></h6>
-                            <div class="product__item__price">$31.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">31.00</div>
                         </div>
                     </div>
                 </div>
@@ -188,10 +179,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">Cookie Dough</a></h6>
-                            <div class="product__item__price">$25.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">25.00</div>
                         </div>
                     </div>
                 </div>
@@ -204,10 +192,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">Vanilla Salted Caramel</a></h6>
-                            <div class="product__item__price">$05.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">05.00</div>
                         </div>
                     </div>
                 </div>
@@ -220,10 +205,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">German Chocolate</a></h6>
-                            <div class="product__item__price">$14.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">14.00</div>
                         </div>
                     </div>
                 </div>
@@ -236,10 +218,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">Dulce De Leche</a></h6>
-                            <div class="product__item__price">$32.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">32.00</div>
                         </div>
                     </div>
                 </div>
@@ -252,10 +231,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">Mississippi Mud</a></h6>
-                            <div class="product__item__price">$08.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">08.00</div>
                         </div>
                     </div>
                 </div>
@@ -268,10 +244,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">VEGAN/GLUTEN FREE</a></h6>
-                            <div class="product__item__price">$98.85</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">98.85</div>
                         </div>
                     </div>
                 </div>
@@ -284,10 +257,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">SWEET CELTICS</a></h6>
-                            <div class="product__item__price">$5.77</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">5.77</div>
                         </div>
                     </div>
                 </div>
@@ -300,10 +270,7 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">SWEET AUTUMN LEAVES</a></h6>
-                            <div class="product__item__price">$26.41</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">26.41</div>
                         </div>
                     </div>
                 </div>
@@ -316,15 +283,12 @@
                         </div>
                         <div class="product__item__text">
                             <h6><a href="#">PALE YELLOW SWEET</a></h6>
-                            <div class="product__item__price">$22.47</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
+                            <div class="product__item__price">22.47</div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="shop__last__option">
+            <!-- <div class="shop__last__option">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-6">
                         <div class="shop__pagination">
@@ -340,7 +304,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- Shop Section End -->
@@ -349,7 +313,7 @@
     <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="footer__widget">
                         <h6>WORKING HOURS</h6>
                         <ul>
@@ -359,29 +323,18 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
                             <a href="#"><img src="img/footer-logo.png" alt=""></a>
                         </div>
-                        <p>Lorem ipsum dolor amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore dolore magna aliqua.</p>
+                        <p>Follow us on the below platform and share the love.</p>
                         <div class="footer__social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-youtube-play"></i></a>
+                            <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
+                            <a href="https://www.instagram.com/an.jani8526"><i class="fa fa-instagram"></i></a>
+                            <!-- <a href="#"><i class="fa fa-youtube-play"></i></a> -->
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="footer__newslatter">
-                        <h6>Subscribe</h6>
-                        <p>Get latest updates and offers.</p>
-                        <form action="#">
-                            <input type="text" placeholder="Email">
-                            <button type="submit"><i class="fa fa-send-o"></i></button>
-                        </form>
                     </div>
                 </div>
             </div>
